add snapshot restore
