# qarax/src/handlers/mod.rs
@@ -45,6 +45,7 @@ pub type Result<T, E = Error> = ::std::result::Result<T, E>;
         vm::handler::resume,
         vm::handler::list_snapshots,
         vm::handler::create_snapshot,
+        vm::handler::restore,
         vm::handler::delete,
         vm::handler::metrics,
         vm::handler::console_log,
@@ -120,6 +121,7 @@ pub type Result<T, E = Error> = ::std::result::Result<T, E>;
             crate::handlers::vm::handler::CreateVmResponse,
             crate::handlers::vm::handler::VmStartResponse,
             crate::handlers::vm::handler::AttachDiskRequest,
+            crate::handlers::vm::handler::RestoreRequest,
             crate::handlers::storage_pool::handler::ImportToPoolRequest,
             crate::handlers::storage_pool::handler::ImportToPoolResponse,
             crate::model::networks::Network,
@@ -214,6 +216,7 @@ fn vms() -> Router {
             "/vms/{vm_id}/snapshots",
             get(vm::handler::list_snapshots).post(vm::handler::create_snapshot),
         )
+        .route("/vms/{vm_id}/restore", post(vm::handler::restore))
 }
 
 fn storage_objects() -> Router {
